Mostly clean up.