@@ -1,11 +1,14 @@
 package com.tw.casino.actor;
 
+import java.util.Deque;
 import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentLinkedDeque;
 import java.util.concurrent.ConcurrentMap;
 import java.util.concurrent.CopyOnWriteArrayList;
 
+import com.tw.casino.ICasinoManager;
 import com.tw.casino.dataloader.DefaultGameDataLoader;
 import com.tw.casino.dataloader.GameDataLoader;
 import com.tw.casino.game.DealerGameDetails;
@@ -13,7 +16,7 @@ import com.tw.casino.game.Game;
 import com.tw.casino.game.GameDetails;
 import com.tw.casino.util.CasinoConstants;
 
-public class CasinoManager
+public class CasinoManager implements ICasinoManager
 {
     private static final String DEFAULT_GAME = CasinoConstants.RPS;
     private static final double DEFAULT_INITIAL_HOUSE_BALANCE = 0;
@@ -21,7 +24,7 @@ public class CasinoManager
     private double houseAccountBalance;
     private GameDataLoader gameDataLoader;
     private CopyOnWriteArrayList<UUID> dealerRegistry;
-    private ConcurrentMap<String, List<UUID>> gameDealerCache;
+    private ConcurrentMap<String, Deque<UUID>> gameDealerCache;
     
     public CasinoManager()
     {
@@ -38,7 +41,7 @@ public class CasinoManager
         for (GameDetails gameDetails : gameDataLoader.availableGames())
         {
             String name = gameDetails.getName();
-            gameDealerCache.putIfAbsent(name, new CopyOnWriteArrayList<UUID>());
+            gameDealerCache.putIfAbsent(name, new ConcurrentLinkedDeque<UUID>());
         }
     }
     
@@ -47,32 +50,49 @@ public class CasinoManager
         return houseAccountBalance;
     }
 
+    @Override
     public void updateHouseAccountBalance(double houseDeposit)
     {
         this.houseAccountBalance += houseDeposit;
     }
 
+    @Override
     public List<GameDetails> getGameDetailsList()
     {
         return gameDataLoader.availableGames();
     }
     
+    @Override
     public List<DealerGameDetails> getGameData()
     {
         return gameDataLoader.getGames();
     }
     
+    /**
+     * Maintains a registry of dealers and assigns them to 
+     * various loaded games with a LIFO policy for retrieving
+     * them for games.
+     * @param dealerId
+     */
+    @Override
     public void registerDealer(UUID dealerId)
     {
         dealerRegistry.addIfAbsent(dealerId);
-        CopyOnWriteArrayList<UUID> dealerList = 
-                (CopyOnWriteArrayList<UUID>) gameDealerCache.get(DEFAULT_GAME);
+        ConcurrentLinkedDeque<UUID> dealerList = 
+                (ConcurrentLinkedDeque<UUID>) gameDealerCache.get(DEFAULT_GAME);
         
-        dealerList.addIfAbsent(dealerId);
+        dealerList.addFirst(dealerId);
     }
     
+    /**
+     * Uses a LIFO policy to retrieve the most recently registered dealer.
+     * @param name
+     * @return
+     */
+    @Override
     public UUID assignDealerForGame(String name)
     {
-        return gameDealerCache.get(name).get(0);
+        return gameDealerCache.get(name).getFirst();
     }
+
 }
